--- a/chests.yml
+++ b/chests.yml
@@ -7328,25 +7328,10 @@ locations:
     orientation: NORTH
     type: Mil_Common
     respawn_time: -1
-  210885ab-355a-47e8-8e15-0bf083e30acb, -255, 219, -2305:
-    material: CHEST
-    orientation: SOUTH
-    type: Mil_Uncommon
-    respawn_time: -1
   210885ab-355a-47e8-8e15-0bf083e30acb, -239, 219, -2304:
     material: CHEST
     orientation: SOUTH
-    type: Civ_Tool
-    respawn_time: -1
-  210885ab-355a-47e8-8e15-0bf083e30acb, -188, 216, -2305:
-    material: CHEST
-    orientation: SOUTH
     type: Mil_Common
-    respawn_time: -1
-  210885ab-355a-47e8-8e15-0bf083e30acb, -171, 216, -2307:
-    material: CHEST
-    orientation: SOUTH
-    type: Mil_Uncommon
     respawn_time: -1
   210885ab-355a-47e8-8e15-0bf083e30acb, -230, 75, -2245:
     material: CHEST
@@ -7367,4 +7352,24 @@ locations:
     material: CHEST
     orientation: NORTH
     type: Mil_Uncommon
+    respawn_time: -1
+  210885ab-355a-47e8-8e15-0bf083e30acb, -188, 216, -2305:
+    material: CHEST
+    orientation: SOUTH
+    type: Mil_Common
+    respawn_time: -1
+  210885ab-355a-47e8-8e15-0bf083e30acb, -171, 216, -2307:
+    material: CHEST
+    orientation: SOUTH
+    type: Mil_Uncommon
+    respawn_time: -1
+  210885ab-355a-47e8-8e15-0bf083e30acb, -237, 75, -2241:
+    material: CHEST
+    orientation: SOUTH
+    type: Civ_Common
+    respawn_time: -1
+  210885ab-355a-47e8-8e15-0bf083e30acb, -255, 219, -2305:
+    material: CHEST
+    orientation: SOUTH
+    type: Mil_Rare
     respawn_time: -1
