--- a/chests.yml
+++ b/chests.yml
@@ -1702,7 +1702,7 @@ locations:
     material: CHEST
     orientation: NORTH
     type: Civ_Common
-    respawn_time: 1449631143708
+    respawn_time: -1
   210885ab-355a-47e8-8e15-0bf083e30acb, 1740, 72, 419:
     material: CHEST
     orientation: WEST
@@ -1932,7 +1932,7 @@ locations:
     material: CHEST
     orientation: NORTH
     type: Civ_Tool
-    respawn_time: -1
+    respawn_time: 1449635508220
   210885ab-355a-47e8-8e15-0bf083e30acb, 3749, 130, -2910:
     material: CHEST
     orientation: SOUTH
@@ -2122,7 +2122,7 @@ locations:
     material: CHEST
     orientation: SOUTH
     type: Civ_Common
-    respawn_time: 1449631217024
+    respawn_time: -1
   210885ab-355a-47e8-8e15-0bf083e30acb, -3028, 63, 296:
     material: CHEST
     orientation: EAST
@@ -2132,7 +2132,7 @@ locations:
     material: CHEST
     orientation: EAST
     type: Civ_Common
-    respawn_time: 1449631309667
+    respawn_time: -1
   210885ab-355a-47e8-8e15-0bf083e30acb, -3029, 63, 255:
     material: CHEST
     orientation: WEST
@@ -2147,12 +2147,12 @@ locations:
     material: CHEST
     orientation: EAST
     type: Civ_Common
-    respawn_time: 1449631327669
+    respawn_time: -1
   210885ab-355a-47e8-8e15-0bf083e30acb, -2994, 64, 240:
     material: CHEST
     orientation: WEST
     type: Civ_Common
-    respawn_time: 1449631324822
+    respawn_time: -1
   210885ab-355a-47e8-8e15-0bf083e30acb, -2948, 63, 244:
     material: CHEST
     orientation: SOUTH
@@ -2192,7 +2192,7 @@ locations:
     material: CHEST
     orientation: EAST
     type: Civ_Store
-    respawn_time: 1449631239513
+    respawn_time: -1
   210885ab-355a-47e8-8e15-0bf083e30acb, -2844, 67, -245:
     material: CHEST
     orientation: EAST
@@ -2232,7 +2232,7 @@ locations:
     material: CHEST
     orientation: EAST
     type: Civ_Store
-    respawn_time: 1449631353585
+    respawn_time: -1
   210885ab-355a-47e8-8e15-0bf083e30acb, -2805, 63, -317:
     material: CHEST
     orientation: SOUTH
@@ -2282,17 +2282,17 @@ locations:
     material: CHEST
     orientation: SOUTH
     type: Civ_Store
-    respawn_time: -1
+    respawn_time: 1449635478802
   210885ab-355a-47e8-8e15-0bf083e30acb, -2793, 69, -250:
     material: CHEST
     orientation: WEST
     type: Civ_Common
-    respawn_time: 1449631304296
+    respawn_time: -1
   210885ab-355a-47e8-8e15-0bf083e30acb, -1724, 68, 355:
     material: CHEST
     orientation: EAST
     type: Civ_Common
-    respawn_time: 1449631276384
+    respawn_time: -1
   210885ab-355a-47e8-8e15-0bf083e30acb, -1769, 68, 355:
     material: CHEST
     orientation: WEST
@@ -2423,11 +2423,6 @@ locations:
     orientation: SOUTH
     type: Civ_Tool
     respawn_time: -1
-  210885ab-355a-47e8-8e15-0bf083e30acb, -1751, 69, 447:
-    material: CHEST
-    orientation: NORTH
-    type: Civ_Hospital
-    respawn_time: -1
   210885ab-355a-47e8-8e15-0bf083e30acb, -1747, 69, 445:
     material: CHEST
     orientation: SOUTH
@@ -2492,12 +2487,12 @@ locations:
     material: CHEST
     orientation: NORTH
     type: Civ_Store
-    respawn_time: 1449631184890
+    respawn_time: -1
   210885ab-355a-47e8-8e15-0bf083e30acb, -1735, 71, 388:
     material: CHEST
     orientation: NORTH
     type: Civ_Store
-    respawn_time: 1449631183542
+    respawn_time: -1
   210885ab-355a-47e8-8e15-0bf083e30acb, -1703, 69, 366:
     material: CHEST
     orientation: SOUTH
@@ -2537,17 +2532,17 @@ locations:
     material: CHEST
     orientation: WEST
     type: Civ_Store
-    respawn_time: -1
+    respawn_time: 1449635475702
   210885ab-355a-47e8-8e15-0bf083e30acb, -2352, 90, -397:
     material: CHEST
     orientation: NORTH
     type: Civ_Store
-    respawn_time: -1
+    respawn_time: 1449635470503
   210885ab-355a-47e8-8e15-0bf083e30acb, -2365, 90, -400:
     material: CHEST
     orientation: EAST
     type: Civ_Store
-    respawn_time: -1
+    respawn_time: 1449635466091
   210885ab-355a-47e8-8e15-0bf083e30acb, -2348, 88, -416:
     material: CHEST
     orientation: SOUTH
@@ -2577,7 +2572,7 @@ locations:
     material: CHEST
     orientation: SOUTH
     type: Civ_Tool
-    respawn_time: -1
+    respawn_time: 1449635424250
   210885ab-355a-47e8-8e15-0bf083e30acb, -2453, 89, -420:
     material: CHEST
     orientation: EAST
@@ -2597,17 +2592,17 @@ locations:
     material: CHEST
     orientation: SOUTH
     type: Civ_Common
-    respawn_time: -1
+    respawn_time: 1449635309655
   210885ab-355a-47e8-8e15-0bf083e30acb, -2485, 84, -483:
     material: CHEST
     orientation: SOUTH
     type: Civ_Common
-    respawn_time: -1
+    respawn_time: 1449635322807
   210885ab-355a-47e8-8e15-0bf083e30acb, -2488, 88, -473:
     material: CHEST
     orientation: WEST
     type: Civ_Store
-    respawn_time: -1
+    respawn_time: 1449635295352
   210885ab-355a-47e8-8e15-0bf083e30acb, -2453, 82, -464:
     material: CHEST
     orientation: SOUTH
@@ -2617,22 +2612,22 @@ locations:
     material: CHEST
     orientation: SOUTH
     type: Civ_Hospital
-    respawn_time: -1
+    respawn_time: 1449635380497
   210885ab-355a-47e8-8e15-0bf083e30acb, -2491, 73, -535:
     material: CHEST
     orientation: SOUTH
     type: Civ_Store
-    respawn_time: -1
+    respawn_time: 1449635454241
   210885ab-355a-47e8-8e15-0bf083e30acb, -2492, 73, -531:
     material: CHEST
     orientation: EAST
     type: Civ_Common
-    respawn_time: -1
+    respawn_time: 1449635451388
   210885ab-355a-47e8-8e15-0bf083e30acb, -2475, 72, -529:
     material: CHEST
     orientation: NORTH
     type: Civ_Tool
-    respawn_time: -1
+    respawn_time: 1449635459890
   210885ab-355a-47e8-8e15-0bf083e30acb, -1884, 225, -600:
     material: CHEST
     orientation: SOUTH
@@ -2932,7 +2927,7 @@ locations:
     material: CHEST
     orientation: SOUTH
     type: Civ_Common
-    respawn_time: 1449631308715
+    respawn_time: -1
   210885ab-355a-47e8-8e15-0bf083e30acb, -734, 105, 289:
     material: CHEST
     orientation: SOUTH
@@ -2982,12 +2977,12 @@ locations:
     material: CHEST
     orientation: SOUTH
     type: Civ_Tool
-    respawn_time: -1
+    respawn_time: 1449635277896
   210885ab-355a-47e8-8e15-0bf083e30acb, -97, 63, 523:
     material: CHEST
     orientation: EAST
     type: Civ_Store
-    respawn_time: -1
+    respawn_time: 1449635328259
   210885ab-355a-47e8-8e15-0bf083e30acb, -87, 63, 549:
     material: CHEST
     orientation: SOUTH
@@ -3042,7 +3037,7 @@ locations:
     material: CHEST
     orientation: SOUTH
     type: Civ_Store
-    respawn_time: -1
+    respawn_time: 1449635368596
   210885ab-355a-47e8-8e15-0bf083e30acb, -30, 67, 512:
     material: CHEST
     orientation: WEST
@@ -3282,7 +3277,7 @@ locations:
     material: CHEST
     orientation: WEST
     type: Mil_Uncommon
-    respawn_time: 1449631291647
+    respawn_time: -1
   210885ab-355a-47e8-8e15-0bf083e30acb, 1344, 76, 250:
     material: CHEST
     orientation: SOUTH
@@ -3407,7 +3402,7 @@ locations:
     material: CHEST
     orientation: WEST
     type: Civ_Store
-    respawn_time: 1449631232517
+    respawn_time: -1
   210885ab-355a-47e8-8e15-0bf083e30acb, 2484, 66, 452:
     material: CHEST
     orientation: WEST
@@ -3437,7 +3432,7 @@ locations:
     material: CHEST
     orientation: SOUTH
     type: Civ_Tool
-    respawn_time: 1449631211475
+    respawn_time: -1
   210885ab-355a-47e8-8e15-0bf083e30acb, 2471, 66, 426:
     material: CHEST
     orientation: SOUTH
@@ -3502,7 +3497,7 @@ locations:
     material: CHEST
     orientation: SOUTH
     type: Civ_Hospital
-    respawn_time: 1449631356042
+    respawn_time: -1
   210885ab-355a-47e8-8e15-0bf083e30acb, 3237, 68, 236:
     material: CHEST
     orientation: EAST
@@ -3692,22 +3687,22 @@ locations:
     material: CHEST
     orientation: EAST
     type: Civ_Tool
-    respawn_time: 1449631368989
+    respawn_time: -1
   210885ab-355a-47e8-8e15-0bf083e30acb, 3747, 70, -253:
     material: CHEST
     orientation: WEST
     type: Civ_Store
-    respawn_time: 1449631242489
+    respawn_time: -1
   210885ab-355a-47e8-8e15-0bf083e30acb, 3756, 75, -261:
     material: CHEST
     orientation: WEST
     type: Civ_Common
-    respawn_time: 1449631250388
+    respawn_time: -1
   210885ab-355a-47e8-8e15-0bf083e30acb, 3745, 70, -293:
     material: CHEST
     orientation: EAST
     type: Civ_Store
-    respawn_time: 1449631230216
+    respawn_time: -1
   210885ab-355a-47e8-8e15-0bf083e30acb, 3760, 70, -285:
     material: CHEST
     orientation: WEST
@@ -3717,7 +3712,7 @@ locations:
     material: CHEST
     orientation: SOUTH
     type: Mil_Rare
-    respawn_time: 1449631313468
+    respawn_time: -1
   210885ab-355a-47e8-8e15-0bf083e30acb, 3928, 62, -602:
     material: CHEST
     orientation: NORTH
@@ -4396,7 +4391,7 @@ locations:
   210885ab-355a-47e8-8e15-0bf083e30acb, -1839, 113, -2363:
     material: CHEST
     orientation: SOUTH
-    type: Mil_Rare
+    type: Battlesign
     respawn_time: -1
   210885ab-355a-47e8-8e15-0bf083e30acb, -1809, 95, -2379:
     material: CHEST
@@ -6147,7 +6142,7 @@ locations:
     material: CHEST
     orientation: NORTH
     type: Mil_Uncommon
-    respawn_time: 1449631290346
+    respawn_time: -1
   210885ab-355a-47e8-8e15-0bf083e30acb, -1230, 78, -3422:
     material: CHEST
     orientation: EAST
@@ -6157,37 +6152,37 @@ locations:
     material: CHEST
     orientation: EAST
     type: Mil_Uncommon
-    respawn_time: 1449631295647
+    respawn_time: -1
   210885ab-355a-47e8-8e15-0bf083e30acb, -1206, 84, -3411:
     material: CHEST
     orientation: NORTH
     type: Mil_Rare
-    respawn_time: 1449631348072
+    respawn_time: -1
   210885ab-355a-47e8-8e15-0bf083e30acb, -1208, 84, -3427:
     material: CHEST
     orientation: SOUTH
     type: Mil_Rare
-    respawn_time: 1449631335517
+    respawn_time: -1
   210885ab-355a-47e8-8e15-0bf083e30acb, -1232, 90, -3423:
     material: CHEST
     orientation: EAST
     type: Mil_Rare
-    respawn_time: 1449631365835
+    respawn_time: -1
   210885ab-355a-47e8-8e15-0bf083e30acb, -1217, 90, -3413:
     material: CHEST
     orientation: SOUTH
     type: Mil_Rare
-    respawn_time: 1449631410910
+    respawn_time: -1
   210885ab-355a-47e8-8e15-0bf083e30acb, -1219, 90, -3425:
     material: CHEST
     orientation: EAST
     type: Mil_Rare
-    respawn_time: 1449631384087
+    respawn_time: -1
   210885ab-355a-47e8-8e15-0bf083e30acb, -1211, 90, -3423:
     material: CHEST
     orientation: EAST
     type: Mil_Rare
-    respawn_time: 1449631391198
+    respawn_time: -1
   210885ab-355a-47e8-8e15-0bf083e30acb, -1217, 94, -3426:
     material: CHEST
     orientation: EAST
@@ -6977,7 +6972,7 @@ locations:
     material: CHEST
     orientation: SOUTH
     type: Civ_Common
-    respawn_time: 1449631385485
+    respawn_time: -1
   210885ab-355a-47e8-8e15-0bf083e30acb, -1718, 75, 396:
     material: CHEST
     orientation: NORTH
@@ -7002,7 +6997,7 @@ locations:
     material: CHEST
     orientation: NORTH
     type: Civ_Common
-    respawn_time: 1449631117974
+    respawn_time: -1
   210885ab-355a-47e8-8e15-0bf083e30acb, -1747, 73, 431:
     material: CHEST
     orientation: NORTH
@@ -7012,7 +7007,7 @@ locations:
     material: CHEST
     orientation: EAST
     type: Civ_Store
-    respawn_time: -1
+    respawn_time: 1449635352277
   210885ab-355a-47e8-8e15-0bf083e30acb, 1140, 5, -1483:
     material: CHEST
     orientation: SOUTH
@@ -7372,4 +7367,24 @@ locations:
     material: CHEST
     orientation: NORTH
     type: Civ_Store
+    respawn_time: -1
+  210885ab-355a-47e8-8e15-0bf083e30acb, -1751, 69, 447:
+    material: CHEST
+    orientation: NORTH
+    type: Civ_Hospital
+    respawn_time: -1
+  210885ab-355a-47e8-8e15-0bf083e30acb, -1821, 71, -2395:
+    material: CHEST
+    orientation: EAST
+    type: Mil_Rare
+    respawn_time: -1
+  210885ab-355a-47e8-8e15-0bf083e30acb, -1840, 71, -2382:
+    material: CHEST
+    orientation: EAST
+    type: Civ_Common
+    respawn_time: -1
+  210885ab-355a-47e8-8e15-0bf083e30acb, -1911, 70, -2417:
+    material: CHEST
+    orientation: SOUTH
+    type: Civ_Tool
     respawn_time: -1
