--- a/addons.yml
+++ b/addons.yml
@@ -12,7 +12,7 @@ zombie:
   burn_in_daylight:
     enabled: false
 natural_regen:
-  enabled: true
+  enabled: false
 enderpearls_explode:
   enabled: true
 chat:
